[package]
name = "zipimgzip"
description = "Resize and ZipArchive the images in the Zip."
keywords = ["zip","resize","image","jpg","png"]
categories = ["multimedia","multimedia::images"]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/orenodinner/zipimgzip/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
zip = "0.6.3"
walkdir = "2.3.2"
tempfile = "3.3.0"
encoding_rs ="0.8.31"
